y.output
Rules useless in parser due to conflicts

   20 IF_STAGE2: IF


State 8 conflicts: 3 reduce/reduce
State 32 conflicts: 2 shift/reduce
State 40 conflicts: 2 shift/reduce
State 41 conflicts: 5 shift/reduce
State 141 conflicts: 21 reduce/reduce
State 145 conflicts: 21 reduce/reduce
State 163 conflicts: 21 reduce/reduce


Grammar

    0 $accept: Program $end

    1 Program: StatementList

    2 StatementList: StatementList Statement SEMICOLON
    3              | StatementList Statement
    4              | Statement SEMICOLON
    5              | Statement

    6 Statement: PrintStmt
    7          | DeclarationStmt
    8          | IfStmt
    9          | Expression
   10          | LoopStmt

   11 PrintStmt: PRINT Bracket

   12 IfStmt: IF_STAGE2 Bracket IF_OPEN1 StatementList IF_CLOSE1
   13       | IF_STAGE Bracket IF_OPEN1 StatementList IFELSE_CLOSE ELSE_STAGE

   14 LoopStmt: FOR FOR_OPEN Expression FIRST_SEMICOLON Expression SECOND_SEMICOLON Expression FOR_CLOSE FOR_Bracket_OPEN StatementList FOR_Bracket_CLOSE
   15         | WHILE_STAGE Bracket WHILE_OPEN StatementList WHILE_CLOSE

   16 IF_OPEN1: '{'

   17 IF_CLOSE1: '}'

   18 WHILE_STAGE: WHILE

   19 IF_STAGE: IF

   20 IF_STAGE2: IF

   21 ELSE_STAGE: ELSE

   22 IFELSE_CLOSE: '}'

   23 WHILE_OPEN: '{'

   24 WHILE_CLOSE: '}'

   25 FIRST_SEMICOLON: SEMICOLON

   26 SECOND_SEMICOLON: SEMICOLON

   27 FOR_OPEN: '('

   28 FOR_CLOSE: ')'

   29 FOR_Bracket_OPEN: Bracket

   30 FOR_Bracket_CLOSE: Bracket

   31 DeclarationStmt: Type IDENT
   32                | Type IDENT '[' Expression ']'
   33                | Type IDENT ASSIGN Expression

   34 Type: INT
   35     | FLOAT
   36     | STRING
   37     | BOOL

   38 Expression: AssignmentExpr
   39           | ArithmeticExpr
   40           | ConversionExpr
   41           | TermExpr
   42           | BoolExpr

   43 AssignmentExpr: ID ASSIGN Expression
   44               | ID '[' Expression ']' ASSIGN Expression
   45               | Expression ADD_ASSIGN Expression
   46               | Expression SUB_ASSIGN Expression
   47               | Expression MUL_ASSIGN Expression
   48               | Expression QUO_ASSIGN Expression
   49               | Expression REM_ASSIGN Expression
   50               | Num ASSIGN Expression
   51               | Num ADD_ASSIGN Expression
   52               | Num SUB_ASSIGN Expression
   53               | Num MUL_ASSIGN Expression
   54               | Num QUO_ASSIGN Expression
   55               | Num REM_ASSIGN Expression

   56 ArithmeticExpr: Expression ADD Expression
   57               | Expression SUB Expression
   58               | Expression MUL Expression
   59               | Expression QUO Expression
   60               | Expression REM Expression

   61 ConversionExpr: '(' INT ')' TermExpr
   62               | '(' FLOAT ')' TermExpr

   63 BoolExpr: LogicalExpr
   64         | CompareExpr

   65 LogicalExpr: Expression LOR Expression
   66            | Expression LAND Expression

   67 CompareExpr: Expression GTR Expression
   68            | Expression LSS Expression
   69            | Expression GEQ Expression
   70            | Expression LEQ Expression
   71            | Expression EQL Expression
   72            | Expression NEQ Expression

   73 Bool: TRUE
   74     | FALSE

   75 TermExpr: ID
   76         | ID '[' Expression ']'
   77         | STRING_LIT
   78         | Num
   79         | Bracket
   80         | Bool
   81         | TermExpr INC
   82         | TermExpr DEC
   83         | ADD Num
   84         | SUB Num
   85         | NOT Expression

   86 Num: INT_LIT
   87    | FLOAT_LIT

   88 ID: IDENT

   89 Bracket: '(' Expression ')'
   90        | '{'
   91        | '}'


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 27 61 62 89
    ')' (41) 28 61 62 89
    '[' (91) 32 44 76
    ']' (93) 32 44 76
    '{' (123) 16 23 90
    '}' (125) 17 22 24 91
    error (256)
    ADD (258) 56 83
    SUB (259) 57 84
    MUL (260) 58
    QUO (261) 59
    REM (262) 60
    INT (263) 34 61
    FLOAT (264) 35 62
    BOOL (265) 37
    STRING (266) 36
    INC (267) 81
    DEC (268) 82
    GEQ (269) 69
    LEQ (270) 70
    EQL (271) 71
    NEQ (272) 72
    LSS (273) 68
    GTR (274) 67
    ASSIGN (275) 33 43 44 50
    ADD_ASSIGN (276) 45 51
    SUB_ASSIGN (277) 46 52
    MUL_ASSIGN (278) 47 53
    QUO_ASSIGN (279) 48 54
    REM_ASSIGN (280) 49 55
    LAND (281) 66
    LOR (282) 65
    NOT (283) 85
    SEMICOLON (284) 2 4 25 26
    IF (285) 19 20
    ELSE (286) 21
    WHILE (287) 18
    FOR (288) 14
    PRINT (289) 11
    TRUE (290) 73
    FALSE (291) 74
    INT_LIT <i_val> (292) 86
    FLOAT_LIT <f_val> (293) 87
    STRING_LIT <s_val> (294) 77
    IDENT <id> (295) 31 32 33 88


Nonterminals, with rules where they appear

    $accept (47)
        on left: 0
    Program (48)
        on left: 1
        on right: 0
    StatementList (49)
        on left: 2 3 4 5
        on right: 1 2 3 12 13 14 15
    Statement (50)
        on left: 6 7 8 9 10
        on right: 2 3 4 5
    PrintStmt (51)
        on left: 11
        on right: 6
    IfStmt (52)
        on left: 12 13
        on right: 8
    LoopStmt (53)
        on left: 14 15
        on right: 10
    IF_OPEN1 (54)
        on left: 16
        on right: 12 13
    IF_CLOSE1 (55)
        on left: 17
        on right: 12
    WHILE_STAGE (56)
        on left: 18
        on right: 15
    IF_STAGE (57)
        on left: 19
        on right: 13
    IF_STAGE2 (58)
        on left: 20
        on right: 12
    ELSE_STAGE (59)
        on left: 21
        on right: 13
    IFELSE_CLOSE (60)
        on left: 22
        on right: 13
    WHILE_OPEN (61)
        on left: 23
        on right: 15
    WHILE_CLOSE (62)
        on left: 24
        on right: 15
    FIRST_SEMICOLON (63)
        on left: 25
        on right: 14
    SECOND_SEMICOLON (64)
        on left: 26
        on right: 14
    FOR_OPEN (65)
        on left: 27
        on right: 14
    FOR_CLOSE (66)
        on left: 28
        on right: 14
    FOR_Bracket_OPEN (67)
        on left: 29
        on right: 14
    FOR_Bracket_CLOSE (68)
        on left: 30
        on right: 14
    DeclarationStmt (69)
        on left: 31 32 33
        on right: 7
    Type <type> (70)
        on left: 34 35 36 37
        on right: 31 32 33
    Expression <type> (71)
        on left: 38 39 40 41 42
        on right: 9 14 32 33 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 65 66 67 68 69 70 71 72 76 85 89
    AssignmentExpr <type> (72)
        on left: 43 44 45 46 47 48 49 50 51 52 53 54 55
        on right: 38
    ArithmeticExpr <type> (73)
        on left: 56 57 58 59 60
        on right: 39
    ConversionExpr <type> (74)
        on left: 61 62
        on right: 40
    BoolExpr <type> (75)
        on left: 63 64
        on right: 42
    LogicalExpr <boool> (76)
        on left: 65 66
        on right: 63
    CompareExpr <boool> (77)
        on left: 67 68 69 70 71 72
        on right: 64
    Bool <type> (78)
        on left: 73 74
        on right: 80
    TermExpr <type> (79)
        on left: 75 76 77 78 79 80 81 82 83 84 85
        on right: 41 61 62 81 82
    Num <type> (80)
        on left: 86 87
        on right: 50 51 52 53 54 55 78 83 84
    ID <id> (81)
        on left: 88
        on right: 43 44 75 76
    Bracket <type> (82)
        on left: 89 90 91
        on right: 11 12 13 15 29 30 79


State 0

    0 $accept: . Program $end

    ADD         shift, and go to state 1
    SUB         shift, and go to state 2
    INT         shift, and go to state 3
    FLOAT       shift, and go to state 4
    BOOL        shift, and go to state 5
    STRING      shift, and go to state 6
    NOT         shift, and go to state 7
    IF          shift, and go to state 8
    WHILE       shift, and go to state 9
    FOR         shift, and go to state 10
    PRINT       shift, and go to state 11
    TRUE        shift, and go to state 12
    FALSE       shift, and go to state 13
    '{'         shift, and go to state 14
    '}'         shift, and go to state 15
    '('         shift, and go to state 16
    INT_LIT     shift, and go to state 17
    FLOAT_LIT   shift, and go to state 18
    STRING_LIT  shift, and go to state 19
    IDENT       shift, and go to state 20

    Program          go to state 21
    StatementList    go to state 22
    Statement        go to state 23
    PrintStmt        go to state 24
    IfStmt           go to state 25
    LoopStmt         go to state 26
    WHILE_STAGE      go to state 27
    IF_STAGE         go to state 28
    IF_STAGE2        go to state 29
    DeclarationStmt  go to state 30
    Type             go to state 31
    Expression       go to state 32
    AssignmentExpr   go to state 33
    ArithmeticExpr   go to state 34
    ConversionExpr   go to state 35
    BoolExpr         go to state 36
    LogicalExpr      go to state 37
    CompareExpr      go to state 38
    Bool             go to state 39
    TermExpr         go to state 40
    Num              go to state 41
    ID               go to state 42
    Bracket          go to state 43


State 1

   83 TermExpr: ADD . Num

    INT_LIT    shift, and go to state 17
    FLOAT_LIT  shift, and go to state 18

    Num  go to state 44


State 2

   84 TermExpr: SUB . Num

    INT_LIT    shift, and go to state 17
    FLOAT_LIT  shift, and go to state 18

    Num  go to state 45


State 3

   34 Type: INT .

    $default  reduce using rule 34 (Type)


State 4

   35 Type: FLOAT .

    $default  reduce using rule 35 (Type)


State 5

   37 Type: BOOL .

    $default  reduce using rule 37 (Type)


State 6

   36 Type: STRING .

    $default  reduce using rule 36 (Type)


State 7

   85 TermExpr: NOT . Expression

    ADD         shift, and go to state 1
    SUB         shift, and go to state 2
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 12
    FALSE       shift, and go to state 13
    '{'         shift, and go to state 14
    '}'         shift, and go to state 15
    '('         shift, and go to state 16
    INT_LIT     shift, and go to state 17
    FLOAT_LIT   shift, and go to state 18
    STRING_LIT  shift, and go to state 19
    IDENT       shift, and go to state 20

    Expression      go to state 46
    AssignmentExpr  go to state 33
    ArithmeticExpr  go to state 34
    ConversionExpr  go to state 35
    BoolExpr        go to state 36
    LogicalExpr     go to state 37
    CompareExpr     go to state 38
    Bool            go to state 39
    TermExpr        go to state 40
    Num             go to state 41
    ID              go to state 42
    Bracket         go to state 43


State 8

   19 IF_STAGE: IF .
   20 IF_STAGE2: IF .

    '{'       reduce using rule 19 (IF_STAGE)
    '{'       [reduce using rule 20 (IF_STAGE2)]
    '}'       reduce using rule 19 (IF_STAGE)
    '}'       [reduce using rule 20 (IF_STAGE2)]
    '('       reduce using rule 19 (IF_STAGE)
    '('       [reduce using rule 20 (IF_STAGE2)]
    $default  reduce using rule 19 (IF_STAGE)


State 9

   18 WHILE_STAGE: WHILE .

    $default  reduce using rule 18 (WHILE_STAGE)


State 10

   14 LoopStmt: FOR . FOR_OPEN Expression FIRST_SEMICOLON Expression SECOND_SEMICOLON Expression FOR_CLOSE FOR_Bracket_OPEN StatementList FOR_Bracket_CLOSE

    '('  shift, and go to state 47

    FOR_OPEN  go to state 48


State 11

   11 PrintStmt: PRINT . Bracket

    '{'  shift, and go to state 14
    '}'  shift, and go to state 15
    '('  shift, and go to state 49

    Bracket  go to state 50


State 12

   73 Bool: TRUE .

    $default  reduce using rule 73 (Bool)


State 13

   74 Bool: FALSE .

    $default  reduce using rule 74 (Bool)


State 14

   90 Bracket: '{' .

    $default  reduce using rule 90 (Bracket)


State 15

   91 Bracket: '}' .

    $default  reduce using rule 91 (Bracket)


State 16

   61 ConversionExpr: '(' . INT ')' TermExpr
   62               | '(' . FLOAT ')' TermExpr
   89 Bracket: '(' . Expression ')'

    ADD         shift, and go to state 1
    SUB         shift, and go to state 2
    INT         shift, and go to state 51
    FLOAT       shift, and go to state 52
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 12
    FALSE       shift, and go to state 13
    '{'         shift, and go to state 14
    '}'         shift, and go to state 15
    '('         shift, and go to state 16
    INT_LIT     shift, and go to state 17
    FLOAT_LIT   shift, and go to state 18
    STRING_LIT  shift, and go to state 19
    IDENT       shift, and go to state 20

    Expression      go to state 53
    AssignmentExpr  go to state 33
    ArithmeticExpr  go to state 34
    ConversionExpr  go to state 35
    BoolExpr        go to state 36
    LogicalExpr     go to state 37
    CompareExpr     go to state 38
    Bool            go to state 39
    TermExpr        go to state 40
    Num             go to state 41
    ID              go to state 42
    Bracket         go to state 43


State 17

   86 Num: INT_LIT .

    $default  reduce using rule 86 (Num)


State 18

   87 Num: FLOAT_LIT .

    $default  reduce using rule 87 (Num)


State 19

   77 TermExpr: STRING_LIT .

    $default  reduce using rule 77 (TermExpr)


State 20

   88 ID: IDENT .

    $default  reduce using rule 88 (ID)


State 21

    0 $accept: Program . $end

    $end  shift, and go to state 54


State 22

    1 Program: StatementList .
    2 StatementList: StatementList . Statement SEMICOLON
    3              | StatementList . Statement

    ADD         shift, and go to state 1
    SUB         shift, and go to state 2
    INT         shift, and go to state 3
    FLOAT       shift, and go to state 4
    BOOL        shift, and go to state 5
    STRING      shift, and go to state 6
    NOT         shift, and go to state 7
    IF          shift, and go to state 8
    WHILE       shift, and go to state 9
    FOR         shift, and go to state 10
    PRINT       shift, and go to state 11
    TRUE        shift, and go to state 12
    FALSE       shift, and go to state 13
    '{'         shift, and go to state 14
    '}'         shift, and go to state 15
    '('         shift, and go to state 16
    INT_LIT     shift, and go to state 17
    FLOAT_LIT   shift, and go to state 18
    STRING_LIT  shift, and go to state 19
    IDENT       shift, and go to state 20

    $default  reduce using rule 1 (Program)

    Statement        go to state 55
    PrintStmt        go to state 24
    IfStmt           go to state 25
    LoopStmt         go to state 26
    WHILE_STAGE      go to state 27
    IF_STAGE         go to state 28
    IF_STAGE2        go to state 29
    DeclarationStmt  go to state 30
    Type             go to state 31
    Expression       go to state 32
    AssignmentExpr   go to state 33
    ArithmeticExpr   go to state 34
    ConversionExpr   go to state 35
    BoolExpr         go to state 36
    LogicalExpr      go to state 37
    CompareExpr      go to state 38
    Bool             go to state 39
    TermExpr         go to state 40
    Num              go to state 41
    ID               go to state 42
    Bracket          go to state 43


State 23

    4 StatementList: Statement . SEMICOLON
    5              | Statement .

    SEMICOLON  shift, and go to state 56

    $default  reduce using rule 5 (StatementList)


State 24

    6 Statement: PrintStmt .

    $default  reduce using rule 6 (Statement)


State 25

    8 Statement: IfStmt .

    $default  reduce using rule 8 (Statement)


State 26

   10 Statement: LoopStmt .

    $default  reduce using rule 10 (Statement)


State 27

   15 LoopStmt: WHILE_STAGE . Bracket WHILE_OPEN StatementList WHILE_CLOSE

    '{'  shift, and go to state 14
    '}'  shift, and go to state 15
    '('  shift, and go to state 49

    Bracket  go to state 57


State 28

   13 IfStmt: IF_STAGE . Bracket IF_OPEN1 StatementList IFELSE_CLOSE ELSE_STAGE

    '{'  shift, and go to state 14
    '}'  shift, and go to state 15
    '('  shift, and go to state 49

    Bracket  go to state 58


State 29

   12 IfStmt: IF_STAGE2 . Bracket IF_OPEN1 StatementList IF_CLOSE1

    '{'  shift, and go to state 14
    '}'  shift, and go to state 15
    '('  shift, and go to state 49

    Bracket  go to state 59


State 30

    7 Statement: DeclarationStmt .

    $default  reduce using rule 7 (Statement)


State 31

   31 DeclarationStmt: Type . IDENT
   32                | Type . IDENT '[' Expression ']'
   33                | Type . IDENT ASSIGN Expression

    IDENT  shift, and go to state 60


State 32

    9 Statement: Expression .
   45 AssignmentExpr: Expression . ADD_ASSIGN Expression
   46               | Expression . SUB_ASSIGN Expression
   47               | Expression . MUL_ASSIGN Expression
   48               | Expression . QUO_ASSIGN Expression
   49               | Expression . REM_ASSIGN Expression
   56 ArithmeticExpr: Expression . ADD Expression
   57               | Expression . SUB Expression
   58               | Expression . MUL Expression
   59               | Expression . QUO Expression
   60               | Expression . REM Expression
   65 LogicalExpr: Expression . LOR Expression
   66            | Expression . LAND Expression
   67 CompareExpr: Expression . GTR Expression
   68            | Expression . LSS Expression
   69            | Expression . GEQ Expression
   70            | Expression . LEQ Expression
   71            | Expression . EQL Expression
   72            | Expression . NEQ Expression

    ADD         shift, and go to state 61
    SUB         shift, and go to state 62
    MUL         shift, and go to state 63
    QUO         shift, and go to state 64
    REM         shift, and go to state 65
    GEQ         shift, and go to state 66
    LEQ         shift, and go to state 67
    EQL         shift, and go to state 68
    NEQ         shift, and go to state 69
    LSS         shift, and go to state 70
    GTR         shift, and go to state 71
    ADD_ASSIGN  shift, and go to state 72
    SUB_ASSIGN  shift, and go to state 73
    MUL_ASSIGN  shift, and go to state 74
    QUO_ASSIGN  shift, and go to state 75
    REM_ASSIGN  shift, and go to state 76
    LAND        shift, and go to state 77
    LOR         shift, and go to state 78

    ADD       [reduce using rule 9 (Statement)]
    SUB       [reduce using rule 9 (Statement)]
    $default  reduce using rule 9 (Statement)


State 33

   38 Expression: AssignmentExpr .

    $default  reduce using rule 38 (Expression)


State 34

   39 Expression: ArithmeticExpr .

    $default  reduce using rule 39 (Expression)


State 35

   40 Expression: ConversionExpr .

    $default  reduce using rule 40 (Expression)


State 36

   42 Expression: BoolExpr .

    $default  reduce using rule 42 (Expression)


State 37

   63 BoolExpr: LogicalExpr .

    $default  reduce using rule 63 (BoolExpr)


State 38

   64 BoolExpr: CompareExpr .

    $default  reduce using rule 64 (BoolExpr)


State 39

   80 TermExpr: Bool .

    $default  reduce using rule 80 (TermExpr)


State 40

   41 Expression: TermExpr .
   81 TermExpr: TermExpr . INC
   82         | TermExpr . DEC

    INC  shift, and go to state 79
    DEC  shift, and go to state 80

    INC       [reduce using rule 41 (Expression)]
    DEC       [reduce using rule 41 (Expression)]
    $default  reduce using rule 41 (Expression)


State 41

   50 AssignmentExpr: Num . ASSIGN Expression
   51               | Num . ADD_ASSIGN Expression
   52               | Num . SUB_ASSIGN Expression
   53               | Num . MUL_ASSIGN Expression
   54               | Num . QUO_ASSIGN Expression
   55               | Num . REM_ASSIGN Expression
   78 TermExpr: Num .

    ASSIGN      shift, and go to state 81
    ADD_ASSIGN  shift, and go to state 82
    SUB_ASSIGN  shift, and go to state 83
    MUL_ASSIGN  shift, and go to state 84
    QUO_ASSIGN  shift, and go to state 85
    REM_ASSIGN  shift, and go to state 86

    ADD_ASSIGN  [reduce using rule 78 (TermExpr)]
    SUB_ASSIGN  [reduce using rule 78 (TermExpr)]
    MUL_ASSIGN  [reduce using rule 78 (TermExpr)]
    QUO_ASSIGN  [reduce using rule 78 (TermExpr)]
    REM_ASSIGN  [reduce using rule 78 (TermExpr)]
    $default    reduce using rule 78 (TermExpr)


State 42

   43 AssignmentExpr: ID . ASSIGN Expression
   44               | ID . '[' Expression ']' ASSIGN Expression
   75 TermExpr: ID .
   76         | ID . '[' Expression ']'

    ASSIGN  shift, and go to state 87
    '['     shift, and go to state 88

    $default  reduce using rule 75 (TermExpr)


State 43

   79 TermExpr: Bracket .

    $default  reduce using rule 79 (TermExpr)


State 44

   83 TermExpr: ADD Num .

    $default  reduce using rule 83 (TermExpr)


State 45

   84 TermExpr: SUB Num .

    $default  reduce using rule 84 (TermExpr)


State 46

   45 AssignmentExpr: Expression . ADD_ASSIGN Expression
   46               | Expression . SUB_ASSIGN Expression
   47               | Expression . MUL_ASSIGN Expression
   48               | Expression . QUO_ASSIGN Expression
   49               | Expression . REM_ASSIGN Expression
   56 ArithmeticExpr: Expression . ADD Expression
   57               | Expression . SUB Expression
   58               | Expression . MUL Expression
   59               | Expression . QUO Expression
   60               | Expression . REM Expression
   65 LogicalExpr: Expression . LOR Expression
   66            | Expression . LAND Expression
   67 CompareExpr: Expression . GTR Expression
   68            | Expression . LSS Expression
   69            | Expression . GEQ Expression
   70            | Expression . LEQ Expression
   71            | Expression . EQL Expression
   72            | Expression . NEQ Expression
   85 TermExpr: NOT Expression .

    $default  reduce using rule 85 (TermExpr)


State 47

   27 FOR_OPEN: '(' .

    $default  reduce using rule 27 (FOR_OPEN)


State 48

   14 LoopStmt: FOR FOR_OPEN . Expression FIRST_SEMICOLON Expression SECOND_SEMICOLON Expression FOR_CLOSE FOR_Bracket_OPEN StatementList FOR_Bracket_CLOSE

    ADD         shift, and go to state 1
    SUB         shift, and go to state 2
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 12
    FALSE       shift, and go to state 13
    '{'         shift, and go to state 14
    '}'         shift, and go to state 15
    '('         shift, and go to state 16
    INT_LIT     shift, and go to state 17
    FLOAT_LIT   shift, and go to state 18
    STRING_LIT  shift, and go to state 19
    IDENT       shift, and go to state 20

    Expression      go to state 89
    AssignmentExpr  go to state 33
    ArithmeticExpr  go to state 34
    ConversionExpr  go to state 35
    BoolExpr        go to state 36
    LogicalExpr     go to state 37
    CompareExpr     go to state 38
    Bool            go to state 39
    TermExpr        go to state 40
    Num             go to state 41
    ID              go to state 42
    Bracket         go to state 43


State 49

   89 Bracket: '(' . Expression ')'

    ADD         shift, and go to state 1
    SUB         shift, and go to state 2
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 12
    FALSE       shift, and go to state 13
    '{'         shift, and go to state 14
    '}'         shift, and go to state 15
    '('         shift, and go to state 16
    INT_LIT     shift, and go to state 17
    FLOAT_LIT   shift, and go to state 18
    STRING_LIT  shift, and go to state 19
    IDENT       shift, and go to state 20

    Expression      go to state 53
    AssignmentExpr  go to state 33
    ArithmeticExpr  go to state 34
    ConversionExpr  go to state 35
    BoolExpr        go to state 36
    LogicalExpr     go to state 37
    CompareExpr     go to state 38
    Bool            go to state 39
    TermExpr        go to state 40
    Num             go to state 41
    ID              go to state 42
    Bracket         go to state 43


State 50

   11 PrintStmt: PRINT Bracket .

    $default  reduce using rule 11 (PrintStmt)


State 51

   61 ConversionExpr: '(' INT . ')' TermExpr

    ')'  shift, and go to state 90


State 52

   62 ConversionExpr: '(' FLOAT . ')' TermExpr

    ')'  shift, and go to state 91


State 53

   45 AssignmentExpr: Expression . ADD_ASSIGN Expression
   46               | Expression . SUB_ASSIGN Expression
   47               | Expression . MUL_ASSIGN Expression
   48               | Expression . QUO_ASSIGN Expression
   49               | Expression . REM_ASSIGN Expression
   56 ArithmeticExpr: Expression . ADD Expression
   57               | Expression . SUB Expression
   58               | Expression . MUL Expression
   59               | Expression . QUO Expression
   60               | Expression . REM Expression
   65 LogicalExpr: Expression . LOR Expression
   66            | Expression . LAND Expression
   67 CompareExpr: Expression . GTR Expression
   68            | Expression . LSS Expression
   69            | Expression . GEQ Expression
   70            | Expression . LEQ Expression
   71            | Expression . EQL Expression
   72            | Expression . NEQ Expression
   89 Bracket: '(' Expression . ')'

    ADD         shift, and go to state 61
    SUB         shift, and go to state 62
    MUL         shift, and go to state 63
    QUO         shift, and go to state 64
    REM         shift, and go to state 65
    GEQ         shift, and go to state 66
    LEQ         shift, and go to state 67
    EQL         shift, and go to state 68
    NEQ         shift, and go to state 69
    LSS         shift, and go to state 70
    GTR         shift, and go to state 71
    ADD_ASSIGN  shift, and go to state 72
    SUB_ASSIGN  shift, and go to state 73
    MUL_ASSIGN  shift, and go to state 74
    QUO_ASSIGN  shift, and go to state 75
    REM_ASSIGN  shift, and go to state 76
    LAND        shift, and go to state 77
    LOR         shift, and go to state 78
    ')'         shift, and go to state 92


State 54

    0 $accept: Program $end .

    $default  accept


State 55

    2 StatementList: StatementList Statement . SEMICOLON
    3              | StatementList Statement .

    SEMICOLON  shift, and go to state 93

    $default  reduce using rule 3 (StatementList)


State 56

    4 StatementList: Statement SEMICOLON .

    $default  reduce using rule 4 (StatementList)


State 57

   15 LoopStmt: WHILE_STAGE Bracket . WHILE_OPEN StatementList WHILE_CLOSE

    '{'  shift, and go to state 94

    WHILE_OPEN  go to state 95


State 58

   13 IfStmt: IF_STAGE Bracket . IF_OPEN1 StatementList IFELSE_CLOSE ELSE_STAGE

    '{'  shift, and go to state 96

    IF_OPEN1  go to state 97


State 59

   12 IfStmt: IF_STAGE2 Bracket . IF_OPEN1 StatementList IF_CLOSE1

    '{'  shift, and go to state 96

    IF_OPEN1  go to state 98


State 60

   31 DeclarationStmt: Type IDENT .
   32                | Type IDENT . '[' Expression ']'
   33                | Type IDENT . ASSIGN Expression

    ASSIGN  shift, and go to state 99
    '['     shift, and go to state 100

    $default  reduce using rule 31 (DeclarationStmt)


State 61

   56 ArithmeticExpr: Expression ADD . Expression

    ADD         shift, and go to state 1
    SUB         shift, and go to state 2
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 12
    FALSE       shift, and go to state 13
    '{'         shift, and go to state 14
    '}'         shift, and go to state 15
    '('         shift, and go to state 16
    INT_LIT     shift, and go to state 17
    FLOAT_LIT   shift, and go to state 18
    STRING_LIT  shift, and go to state 19
    IDENT       shift, and go to state 20

    Expression      go to state 101
    AssignmentExpr  go to state 33
    ArithmeticExpr  go to state 34
    ConversionExpr  go to state 35
    BoolExpr        go to state 36
    LogicalExpr     go to state 37
    CompareExpr     go to state 38
    Bool            go to state 39
    TermExpr        go to state 40
    Num             go to state 41
    ID              go to state 42
    Bracket         go to state 43


State 62

   57 ArithmeticExpr: Expression SUB . Expression

    ADD         shift, and go to state 1
    SUB         shift, and go to state 2
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 12
    FALSE       shift, and go to state 13
    '{'         shift, and go to state 14
    '}'         shift, and go to state 15
    '('         shift, and go to state 16
    INT_LIT     shift, and go to state 17
    FLOAT_LIT   shift, and go to state 18
    STRING_LIT  shift, and go to state 19
    IDENT       shift, and go to state 20

    Expression      go to state 102
    AssignmentExpr  go to state 33
    ArithmeticExpr  go to state 34
    ConversionExpr  go to state 35
    BoolExpr        go to state 36
    LogicalExpr     go to state 37
    CompareExpr     go to state 38
    Bool            go to state 39
    TermExpr        go to state 40
    Num             go to state 41
    ID              go to state 42
    Bracket         go to state 43


State 63

   58 ArithmeticExpr: Expression MUL . Expression

    ADD         shift, and go to state 1
    SUB         shift, and go to state 2
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 12
    FALSE       shift, and go to state 13
    '{'         shift, and go to state 14
    '}'         shift, and go to state 15
    '('         shift, and go to state 16
    INT_LIT     shift, and go to state 17
    FLOAT_LIT   shift, and go to state 18
    STRING_LIT  shift, and go to state 19
    IDENT       shift, and go to state 20

    Expression      go to state 103
    AssignmentExpr  go to state 33
    ArithmeticExpr  go to state 34
    ConversionExpr  go to state 35
    BoolExpr        go to state 36
    LogicalExpr     go to state 37
    CompareExpr     go to state 38
    Bool            go to state 39
    TermExpr        go to state 40
    Num             go to state 41
    ID              go to state 42
    Bracket         go to state 43


State 64

   59 ArithmeticExpr: Expression QUO . Expression

    ADD         shift, and go to state 1
    SUB         shift, and go to state 2
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 12
    FALSE       shift, and go to state 13
    '{'         shift, and go to state 14
    '}'         shift, and go to state 15
    '('         shift, and go to state 16
    INT_LIT     shift, and go to state 17
    FLOAT_LIT   shift, and go to state 18
    STRING_LIT  shift, and go to state 19
    IDENT       shift, and go to state 20

    Expression      go to state 104
    AssignmentExpr  go to state 33
    ArithmeticExpr  go to state 34
    ConversionExpr  go to state 35
    BoolExpr        go to state 36
    LogicalExpr     go to state 37
    CompareExpr     go to state 38
    Bool            go to state 39
    TermExpr        go to state 40
    Num             go to state 41
    ID              go to state 42
    Bracket         go to state 43


State 65

   60 ArithmeticExpr: Expression REM . Expression

    ADD         shift, and go to state 1
    SUB         shift, and go to state 2
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 12
    FALSE       shift, and go to state 13
    '{'         shift, and go to state 14
    '}'         shift, and go to state 15
    '('         shift, and go to state 16
    INT_LIT     shift, and go to state 17
    FLOAT_LIT   shift, and go to state 18
    STRING_LIT  shift, and go to state 19
    IDENT       shift, and go to state 20

    Expression      go to state 105
    AssignmentExpr  go to state 33
    ArithmeticExpr  go to state 34
    ConversionExpr  go to state 35
    BoolExpr        go to state 36
    LogicalExpr     go to state 37
    CompareExpr     go to state 38
    Bool            go to state 39
    TermExpr        go to state 40
    Num             go to state 41
    ID              go to state 42
    Bracket         go to state 43


State 66

   69 CompareExpr: Expression GEQ . Expression

    ADD         shift, and go to state 1
    SUB         shift, and go to state 2
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 12
    FALSE       shift, and go to state 13
    '{'         shift, and go to state 14
    '}'         shift, and go to state 15
    '('         shift, and go to state 16
    INT_LIT     shift, and go to state 17
    FLOAT_LIT   shift, and go to state 18
    STRING_LIT  shift, and go to state 19
    IDENT       shift, and go to state 20

    Expression      go to state 106
    AssignmentExpr  go to state 33
    ArithmeticExpr  go to state 34
    ConversionExpr  go to state 35
    BoolExpr        go to state 36
    LogicalExpr     go to state 37
    CompareExpr     go to state 38
    Bool            go to state 39
    TermExpr        go to state 40
    Num             go to state 41
    ID              go to state 42
    Bracket         go to state 43


State 67

   70 CompareExpr: Expression LEQ . Expression

    ADD         shift, and go to state 1
    SUB         shift, and go to state 2
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 12
    FALSE       shift, and go to state 13
    '{'         shift, and go to state 14
    '}'         shift, and go to state 15
    '('         shift, and go to state 16
    INT_LIT     shift, and go to state 17
    FLOAT_LIT   shift, and go to state 18
    STRING_LIT  shift, and go to state 19
    IDENT       shift, and go to state 20

    Expression      go to state 107
    AssignmentExpr  go to state 33
    ArithmeticExpr  go to state 34
    ConversionExpr  go to state 35
    BoolExpr        go to state 36
    LogicalExpr     go to state 37
    CompareExpr     go to state 38
    Bool            go to state 39
    TermExpr        go to state 40
    Num             go to state 41
    ID              go to state 42
    Bracket         go to state 43


State 68

   71 CompareExpr: Expression EQL . Expression

    ADD         shift, and go to state 1
    SUB         shift, and go to state 2
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 12
    FALSE       shift, and go to state 13
    '{'         shift, and go to state 14
    '}'         shift, and go to state 15
    '('         shift, and go to state 16
    INT_LIT     shift, and go to state 17
    FLOAT_LIT   shift, and go to state 18
    STRING_LIT  shift, and go to state 19
    IDENT       shift, and go to state 20

    Expression      go to state 108
    AssignmentExpr  go to state 33
    ArithmeticExpr  go to state 34
    ConversionExpr  go to state 35
    BoolExpr        go to state 36
    LogicalExpr     go to state 37
    CompareExpr     go to state 38
    Bool            go to state 39
    TermExpr        go to state 40
    Num             go to state 41
    ID              go to state 42
    Bracket         go to state 43


State 69

   72 CompareExpr: Expression NEQ . Expression
